--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <title>Delani Studios</title>
 </head>
 <body>
+    <div class="container">
+        <h1><b>WELCOME TO DELANI STUDIO</b></h1>
+        <h3>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</h3>
+
+        <img src="">
+        <hr>
+
+        <h2><b>ABOUT US</b></h2>
+        <p>When you work with us, you are part of a team of committed collaborators. All aspects of our software development process are intergrated, interactive <br>
+        and agile.<br>
+        Our approach unifies design, development and product management to create exceptional products. <br>
+        We start each project by understanding your business goals, the user's needs and the product requirements <br>
+        Then we help translate them into effective and elegant solutions.</p>
+        <br>
+        <h2><b>SERVICES</b></h2>
+        <P>Before we sign a contract or write a line of code our team will spend the necessary time needed to understand your product vision <br>
+        The outcome of this scoping session is proposal or high-level statement of work. <br>
+        Based on your requirements, we can provide a complete offering or just the pieces you need. </P>
+    </div>
     
 </body>
 </html>
