--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="mystyle.css" rel="stylesheet">
     <title>Delani Studios</title>
 </head>
 <body>
     <div class="container">
+        <div style="background-image: url('backgrounds/h_img.jpg');">
         <h1><b>WELCOME TO DELANI STUDIO</b></h1>
         <h3>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</h3>
-
-        <img src="">
+    </div>
+      
         <hr>
 
         <h2><b>ABOUT US</b></h2>
@@ -20,10 +23,12 @@
         We start each project by understanding your business goals, the user's needs and the product requirements <br>
         Then we help translate them into effective and elegant solutions.</p>
         <br>
+        <div style="background-image: url('backgrounds/s_image.jpg');">
         <h2><b>SERVICES</b></h2>
         <P>Before we sign a contract or write a line of code our team will spend the necessary time needed to understand your product vision <br>
         The outcome of this scoping session is proposal or high-level statement of work. <br>
         Based on your requirements, we can provide a complete offering or just the pieces you need. </P>
+        </div>
     </div>
     
 </body>
