added social icons

--- a/index.html
+++ b/index.html
@@ -99,6 +99,38 @@
     </div>
 </div>
 
+<div class="container">
+    <div class="row">
+        <div class="col-md-1">
+            <img src="social_icons/twitter.png">
+        </div>
+        <div class="col-md-1">
+            <img src="social_icons/dribble.png">
+        </div>
+        <div class="col-md-1">
+            <img src="social_icons/facebook.png">
+        </div>
+        <div class="col-md-1">
+            <img src="social_icons/g_plus.png">
+        </div>
+        <div class="col-md-1">
+            <img src="social_icons/skype.png">
+        </div>
+        <div class="col-md-1">
+            <img src="social_icons/stumble_upon.png">
+        </div>
+        <div class="col-md-1">
+            <img src="social_icons/behance.png">
+        </div>
+        <div class="col-md-1">
+            <img src="social_icons/pinterest.png">
+        </div>
+        <div class="col-md-1">
+            <img src="social_icons/flickr.png">
+        </div>
+    </div>
+</div>
+
     
 </body>
 </html>
