added hover effect on portfolio

--- a/index.html
+++ b/index.html
@@ -88,34 +88,55 @@
             <div class="col-md-3">
                 <div class="h1">
                 <img id = "img1"src="images/portfolio/work4.jpg">
-                <div id="h1text">UPCOMING PROJECT</div>
+                <div id="h1text">NEW PROJECT</div>
                 </div>
                 
             </div>
             <div class="col-md-3">
+                <div class="h2">
                 <img id="img2" src="images/portfolio/work3.jpg">
+                <div id="h2text">ontario security</div>
+                </div>
             </div>
             <div class="col-md-3">
+                <div class="h3">
                 <img id="img3"src="images/portfolio/work2.jpg">
+                <div id="h3text">Orange Design</div>
+                </div>
             </div>
             
             <div class="col-md-3">
+                <div class="h4">
                 <img id="img4"src="images/portfolio/work1.jpg">
+                <div id="h4text">Jim Carrey</div>
+                </div>
             </div>
         </div>
         <br>
         <div class="row">
             <div class="col-md-3">
+                <div class="h5">
                 <img id="img5"src="images/portfolio/work5.jpg">
+                <div id="h5text">Sleep Tracker</div>
+                </div>
             </div>
             <div class="col-md-3">
+                <div class="h6">
                 <img id= "img6"src="images/portfolio/work6.jpg">
+                <div id="h6text">Button Toggle</div>
+                </div>
             </div>
             <div class="col-md-3">
+                <div class="h7">
                 <img id="img7"src="images/portfolio/work7.jpg">
+                <div id="h7text">Burned shop</div>
+                </div>
             </div>
             <div class="col-md-3">
+                <div class="h8">
                 <img id="img8"src="images/portfolio/work8.jpg">
+                <div id="h8text">Giraffe restaurant</div>
+                </div>
             </div>
         </div>
     </div>
